# dagster-and-r

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py  workspace.yaml
dagster_and_r/: __init__.py  asset_checks.py  assets.py  definitions.py  hello.py  jobs.py  ops.py
dagster_and_r/R/: hello_world.R  iris.R
dagster_and_r_tests/: test_r.py
