[project]
name = "dagster-and-r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster-pandas>=0.25.4",
    "dagster>=1.9.4",
    "dagster-docker>=0.25.4",
    "dagster-pipes>=1.9.4",
    "dagster-webserver>=1.9.4",
    "pandas>=2.2.3",
]
